Updated PR. Removed commented section in nav.

--- a/resources/html/data.html
+++ b/resources/html/data.html
@@ -66,7 +66,10 @@
                                 Near real time satellite-based fire detection data from Terra/Aqua Moderate Resolution Imaging Spectroradiometer (MODIS) and Suomi National Polar-orbiting Partnership (NPP) Visible Infrared Imaging Radiometer Suite (VIIRS).
                             </li>
                             <li>
-                                Fire progression data for selected recent fires of historical significance in California. • Archived weather forecast or analysis data for the above fires of historical significance.
+                                Fire progression data for selected recent fires of historical significance in California.
+                            </li>
+                            <li>
+                                Archived weather forecast or analysis data for the above fires of historical significance.
                             </li>
                             <li>
                                 Publicly accessible maps of electricity assets and damage to electricity assets from wildfire.
@@ -80,10 +83,10 @@
                                 Interactive data exploration - <a href="https://pyregence.org/forecast" target="_blank">pyregence.org/forecast</a>
                             </li>
                             <li>
-                                Near-term Forecast Data - <a href="https://data.pyregence.org" target="_blank">data.pyregence.org</a>
+                                Near-term forecast data - <a href="https://data.pyregence.org" target="_blank">data.pyregence.org</a>
                             </li>
                             <li>
-                                Geospatial data can be accessed from GeoServer - <a href="https://data.pyregence.org:8443/geoserver" target="_blank">data.pyregence.org:8443/geoserver</a>
+                                Geospatial data can be accessed from our GeoServer - <a href="https://data.pyregence.org:8443/geoserver" target="_blank">data.pyregence.org:8443/geoserver</a>
                             </li>
                         </ul>  
                     </div>
