added noreferrer to link.

--- a/resources/html/data.html
+++ b/resources/html/data.html
@@ -42,7 +42,7 @@
                         </h4>
                         <ul>
                             <li>
-                                Pyregence Sodar Data - <a href="https://cecsig.sonomatech.com/windsodar.jsp" target="_blank">https://cecsig.sonomatech.com/windsodar.jsp</a>
+                                Pyregence Sodar Data - <a href="https://cecsig.sonomatech.com/windsodar.jsp" target="_blank" rel="noreferrer">https://cecsig.sonomatech.com/windsodar.jsp</a>
                             </li>
                         </ul>    
                     </div>
