--- a/resources/html/privacy-policy.html
+++ b/resources/html/privacy-policy.html
@@ -9,7 +9,7 @@
             “Personal Information” generally means any information that identifies you as an individual, and any other information we associate with it. We collect several categories of information, from a few different sources:
         </p>
         <p>
-            <em>Usage Information</em>. We passively collect information when you use the Site, through our web servers and third-party analytics tools. For instance, our system logs may record certain information about visitors to the Site, including the web request, Internet Protocol (“IP”) address, device and mobile ad identifiers, browser information, interaction with the Site, pages viewed, app usage, and other such information.
+            <em>Usage Information.</em> We passively collect information when you use the Site, through our web servers and third-party analytics tools. For instance, our system logs may record certain information about visitors to the Site, including the web request, Internet Protocol (“IP”) address, device and mobile ad identifiers, browser information, interaction with the Site, pages viewed, app usage, and other such information.
         </p>
         <p>
             <em>Information You Might Provide.</em> We collect information and other content you voluntarily provide us, which may include:
@@ -23,11 +23,12 @@
             <li>Any content or contributions you post in a public space on the Site, including comments, videos and photos that you might submit.</li>
         </ul>
         <p>
-            <em>Non-Identifiable Information</em>. In addition to collecting Personal Information, we may collect information that does not identify you and is not associated with your Personal Information. We may also de-identify information, so it no longer identifies you. We may also aggregate and use such information to engage other activities in a manner that does not use Personal Information and is thus outside the scope of this Privacy Policy.
+            <em>Non-Identifiable Information.</em> In addition to collecting Personal Information, we may collect information that does not identify you and is not associated with your Personal Information. We may also de-identify information, so it no longer identifies you. We may also aggregate and use such information to engage other activities in a manner that does not use Personal Information and is thus outside the scope of this Privacy Policy.
         </p>
         <h3>COOKIES AND ANALYTICS.</h3>
         <p>
-            We use certain cookies, pixel tags and other technologies to help us understand how you use the Site and enable us to personalize your experience. Cookies are small pieces of text. They are provided by most websites and stored by your web browser on the computer, phone, or other device that you are using. Cookies serve many purposes. They help a website remember your preferences, learn which areas of the website are useful and which areas need improvement, and can provide you with targeted advertisements or personalized content. Sometimes, cookies are enabled when pixels are placed on a website. Pixels are also referred to as web beacons, clear gifs, and tags. They enable websites to read and place cookies.  To learn more about cookies, please see the Cookies and Analytics section below, or visit <a href="http://www.allaboutcookies.org/">http://www.allaboutcookies.org/.</a>
+            We use certain cookies, pixel tags and other technologies to help us understand how you use the Site and enable us to personalize your experience. Cookies are small pieces of text. They are provided by most websites and stored by your web browser on the computer, phone, or other device that you are using. Cookies serve many purposes. They help a website remember your preferences, learn which areas of the website are useful and which areas need improvement, and can provide you with targeted advertisements or personalized content. Sometimes, cookies are enabled when pixels are placed on a website. Pixels are also referred to as web beacons, clear gifs, and tags. They enable websites to read and place cookies.  To learn more about cookies, please see the Cookies and Analytics section below, or visit
+            <a href="http://www.allaboutcookies.org/">http://www.allaboutcookies.org/.</a>
         </p>
         <h3>HOW WE USE PERSONAL INFORMATION.</h3>
         <p>
@@ -48,7 +49,7 @@
             <li>to detect, prevent, or investigate potential security incidents or fraud.</li>
             <li>to enforce our terms and conditions.</li>
             <li>to protect our operations.</li>
-            <li>to protect our rights, privacy, safety or property, security and/or that of you or others</li>
+            <li>to protect our rights, privacy, safety or property, security and/or that of you or others.</li>
             <li>to allow us to pursue available remedies or limit the damages that we may sustain.</li>
         </ul>
         <p>
@@ -68,7 +69,7 @@
         </ul>
         <h3>YOUR CHOICES AND RIGHTS.</h3>
         <p>
-            <em>Modifying your Personal Information</em>. To update or change Personal Information that you already have submitted in connection with a product registration, warranty claim, or employment application, please contact us at pyregence@sig-gis.com. <br> <br><em>Cookies</em>. You can modify your cookie settings on your browser, but if you delete or choose not to accept our cookies, you may be missing out on certain features of the Site.<br><br><em>"Do Not Track" Settings</em>. Your Internet browser may contain tools to request that web sites not track your online activities. Industry standards for this technology are evolving and we currently do not respond to or take any action with respect to the "do not track" settings in your Internet browser.<br><br><em>California Privacy Rights.</em> California residents have additional rights under the California Consumer Privacy Act. <br><br><em>Right to Know. </em>California residents may request the following information from Pyregence:
+            <em>Modifying your Personal Information.</em> To update or change Personal Information that you already have submitted in connection with a product registration, warranty claim, or employment application, please contact us at pyregence@sig-gis.com. <br> <br><em>Cookies.</em> You can modify your cookie settings on your browser, but if you delete or choose not to accept our cookies, you may be missing out on certain features of the Site.<br><br><em>"Do Not Track" Settings.</em> Your Internet browser may contain tools to request that web sites not track your online activities. Industry standards for this technology are evolving and we currently do not respond to or take any action with respect to the "do not track" settings in your Internet browser.<br><br><em>California Privacy Rights.</em> California residents have additional rights under the California Consumer Privacy Act. <br><br><em>Right to Know. </em>California residents may request the following information from Pyregence:
         </p>
         <ol>
             <li>The categories of Personal Information that we collect, use, disclose, and sell, as applicable;</li>
@@ -78,14 +79,14 @@
             <li>The specific pieces of Personal Information that we have collected about you.</li>
         </ol>
         <p>
-            <em>Right to Delete</em>. California residents may request that we delete your Personal Information. Note that deletion requests are subject to certain limitations, for example, we may keep Personal Information as required or permitted by law, or to process transactions and facilitate customer and service requests.<br><br><em>Right to Opt-Out</em>. We do not sell the Personal Information of California residents.
+            <em>Right to Delete.</em> California residents may request that we delete your Personal Information. Note that deletion requests are subject to certain limitations, for example, we may keep Personal Information as required or permitted by law, or to process transactions and facilitate customer and service requests.<br><br><em>Right to Opt-Out.</em> We do not sell the Personal Information of California residents.
         </p>
         <p>
-            <em>Submitting a Request</em>. You have the right not to be discriminated against if you exercise your privacy rights. To make a request to access or delete your Personal Information, please email us at pyregence@sig-gis.com. Please provide your name, state of residence, home or business address with zip code, the services you utilized, so that we can authenticate and verify your request as we are required to do by law.  You may designate an authorized agent to submit a request on your behalf. In order to designate an authorized agent, please send us your written authorization for that agent. Both you and your agent must sign and date the form.
+            <em>Submitting a Request.</em> You have the right not to be discriminated against if you exercise your privacy rights. To make a request to access or delete your Personal Information, please email us at pyregence@sig-gis.com. Please provide your name, state of residence, home or business address with zip code, the services you utilized, so that we can authenticate and verify your request as we are required to do by law.  You may designate an authorized agent to submit a request on your behalf. In order to designate an authorized agent, please send us your written authorization for that agent. Both you and your agent must sign and date the form.
         </p>
         <h3>OTHER THINGS TO KNOW.</h3>
         <p>
-            <em>Third Party Content</em>. The Site may link to other websites and online services. Such links are provided for your convenience only. We have no control over such third parties and if you decide to access any third-party link, you do so solely at your own risk and subject to the terms and conditions and privacy policy that third-party.<br> <br><em>Social Media Features and Widgets</em>. The Site may include social media features and widgets, such as the LinkedIn button. These features may collect your IP address, which page you are visiting on the Site, and may set a cookie to enable the feature to function properly. Social media features and widgets are either hosted by a third party or hosted directly on our online Services. Your interactions with these features and widgets are governed by the privacy policy of the company providing them.<br> <br><em>Minors</em>. The Site is not directed toward minors under age 18. If we discover that we have inadvertently collected Personal Information from a person under 18, we will delete that information immediately. If you are a parent or guardian of a minor and believe he or she has disclosed personal information to us, please contact us at pyregence@sig-gis.com.
+            <em>Third Party Content.</em> The Site may link to other websites and online services. Such links are provided for your convenience only. We have no control over such third parties and if you decide to access any third-party link, you do so solely at your own risk and subject to the terms and conditions and privacy policy that third-party.<br> <br><em>Social Media Features and Widgets.</em> The Site may include social media features and widgets, such as the LinkedIn button. These features may collect your IP address, which page you are visiting on the Site, and may set a cookie to enable the feature to function properly. Social media features and widgets are either hosted by a third party or hosted directly on our online Services. Your interactions with these features and widgets are governed by the privacy policy of the company providing them.<br> <br><em>Minors.</em> The Site is not directed toward minors under age 18. If we discover that we have inadvertently collected Personal Information from a person under 18, we will delete that information immediately. If you are a parent or guardian of a minor and believe he or she has disclosed personal information to us, please contact us at pyregence@sig-gis.com.
         </p>
         <h3>CHANGES TO THIS POLICY.</h3>
         <p>
@@ -93,7 +94,8 @@
         </p>
         <h3>QUESTIONS.</h3>
         <p>
-            If you have any questions regarding this Privacy Policy, you can contact us at <a href="mailto:pyregence@sig-gis.com">pyregence@sig-gis.com</a>.
+            If you have any questions regarding this Privacy Policy, you can contact us at
+            <a href="mailto:pyregence@sig-gis.com">pyregence@sig-gis.com</a>.
         </p>
     </div>
 </div>
