Add blog to main nav

--- a/resources/html/~header.html
+++ b/resources/html/~header.html
@@ -34,6 +34,9 @@
                         <li itemscope="itemscope" itemtype="https://www.schema.org/SiteNavigationElement" id="menu-item-about" class="nav-item">
                             <a href="/about" class="nav-link">about</a>
                         </li>
+                        <li itemscope="itemscope" itemtype="https://www.schema.org/SiteNavigationElement" id="menu-item-blog" class="nav-item">
+                            <a href="https://blog.pyregence.org" class="nav-link">blog</a>
+                        </li>
                     </ul>
                 </div>
             </div>
