update menu order

--- a/resources/html/~header.html
+++ b/resources/html/~header.html
@@ -22,17 +22,37 @@
                 </div>
                 <div class="mobilenav">
                     <ul id="main-menu" class="navbar ml-auto list-unstyled mb-0">
-                        <li itemscope="itemscope" itemtype="https://www.schema.org/SiteNavigationElement" id="menu-item-blog" class="nav-item">
-                            <a href="https://blog.pyregence.org" class="nav-link">blog</a>
+                        <li
+                            itemscope="itemscope"
+                            itemtype="https://www.schema.org/SiteNavigationElement"
+                            id="menu-item-about"
+                            class="nav-item"
+                        >
+                            <a href="/about" class="nav-link">about</a>
                         </li>
-                        <li itemscope="itemscope" itemtype="https://www.schema.org/SiteNavigationElement" id="menu-item-data" class="nav-item">
+                        <li
+                            itemscope="itemscope"
+                            itemtype="https://www.schema.org/SiteNavigationElement"
+                            id="menu-item-data"
+                            class="nav-item"
+                        >
                             <a href="/data" class="nav-link">data</a>
                         </li>
-                        <li itemscope="itemscope" itemtype="https://www.schema.org/SiteNavigationElement" id="menu-item-forecasts" class="nav-item">
+                        <li
+                            itemscope="itemscope"
+                            itemtype="https://www.schema.org/SiteNavigationElement"
+                            id="menu-item-forecasts"
+                            class="nav-item"
+                        >
                             <a href="/forecast" class="nav-link">forecasts</a>
                         </li>
-                        <li itemscope="itemscope" itemtype="https://www.schema.org/SiteNavigationElement" id="menu-item-about" class="nav-item">
-                            <a href="/about" class="nav-link">about</a>
+                        <li
+                            itemscope="itemscope"
+                            itemtype="https://www.schema.org/SiteNavigationElement"
+                            id="menu-item-blog"
+                            class="nav-item"
+                        >
+                            <a href="https://blog.pyregence.org" class="nav-link">blog</a>
                         </li>
                     </ul>
                 </div>
