update email on static pages

--- a/resources/html/home.html
+++ b/resources/html/home.html
@@ -351,7 +351,7 @@
                         <div class="col-md-12">
                             <p><span class="smaller">Project Manager</span><br>
                                 Shane Romsos<br>
-                                <a href="mailto:pyregence@sig-gis.com">pyregence@sig-gis.com</a>
+                                <a href="mailto:contact@pyregence.org">contact@pyregence.org</a>
                             </p>
                         </div>
                     </div>
