--- a/resources/html/terms-of-use.html
+++ b/resources/html/terms-of-use.html
@@ -91,7 +91,7 @@
         </p>
         <h3>VII. DISPUTE RESOLUTION TERMS (PLEASE READ CAREFULLY).</h3>
         <p>
-            <strong><u>Informal Dispute Resolution</u></strong>  To give us an opportunity to resolve informally any disputes between you and us arising out of or relating in any way to our Site, these Terms, or any services or products provided (“Claims”), you agree to communicate your Claim to us by emailing us at by emailing us at contact@pyregence.org. You agree not to bring any suit or to initiate arbitration proceedings until 60 days after the date on which you communicated your Claim to us have elapsed. If we are not able to resolve your Claim within 60 days, you may seek relief through arbitration or in small claims court, as set forth in this Section VII.
+            <strong><u>Informal Dispute Resolution</u></strong>  To give us an opportunity to resolve informally any disputes between you and us arising out of or relating in any way to our Site, these Terms, or any services or products provided (“Claims”), you agree to communicate your Claim to us by emailing us at by emailing us at <a href="mailto:contact@pyregence.org">contact@pyregence.org</a>. You agree not to bring any suit or to initiate arbitration proceedings until 60 days after the date on which you communicated your Claim to us have elapsed. If we are not able to resolve your Claim within 60 days, you may seek relief through arbitration or in small claims court, as set forth in this Section VII.
         </p>
         <p>
             <strong><u>Choice of Arbitrator and Rules</u></strong>  Any disputes, claims, and causes of action arising out of or connected with your use of the Site (each, a “Dispute”)  must be submitted exclusively to the American Arbitration Association (AAA) to be heard under their <a href="https://www.adr.org/sites/default/files/Consumer_Rules_Web_0.pdf" target="_blank" rel="noreferrer noopener">Consumer Arbitration Rules</a>.  The AAA’s rules and filing instructions are available at www.adr.org or by calling 1-800-778-7879.  If for any reason,  AAA is unable or unwilling to conduct the arbitration consistent with these terms, you and we will pick another arbitrator pursuant to <a href="https://www.law.cornell.edu/uscode/text/9/5" target="_blank" rel="noreferrer noopener">9 U.S. Code § 5</a>.
@@ -122,7 +122,7 @@
         </p>
         <h3>VIII. MISCELLANEOUS.</h3>
         <p>
-            <strong><u>Notices</u></strong>  Notices to you may be made via posting to the Site, by email, or by regular mail, in our sole discretion.  Notices to us should be made by emailing us at contact@pyregence.org.
+            <strong><u>Notices</u></strong>  Notices to you may be made via posting to the Site, by email, or by regular mail, in our sole discretion.  Notices to us should be made by emailing us at <a href="mailto:contact@pyregence.org">contact@pyregence.org</a>.
         </p>
         <p>
             <strong><u>Evidence</u></strong>  You agree that a printed version of these Terms and of any notice given in electronic form, including by posting to the Site, shall be admissible in any judicial or administrative proceedings based upon or relating to these Terms.
