Addition of new dataset

--- a/resources/html/data.html
+++ b/resources/html/data.html
@@ -31,6 +31,46 @@
                 <article class="col-lg-12 mb-4 px-3">
                     <div class="data-single">
                         <h3>
+                            Courtney Aviation Datasets
+                        </h3>
+                        <div class="line yellow"></div>
+                        <p>Pyregence has available for sharing roughly 17 TB of data from test flyovers performed by Courtney Aviation on behalf of the USDA Forest Service National Infrared Operations (NIROPS) Unit and the California Department of Forestry and Fire Protection (CalFire).
+                        </p>
+                        <h4>
+                            The data includes:
+                        </h4>
+                        <ul>
+                            <li>
+                                lower-res processed data
+                            </li>
+                            <li>
+                                raw full-res .OWI data
+                            </li>
+                            <li>
+                                .TIF long-wavelength infrared (LWIR) orthomosaics at a good resolution (the data Courtney Aviation uses for mapping)
+                            </li>
+                            <li>
+                                16-bit (per band) medium resolution RGB and near-infrared (NIR) .TIF mosaics taken during the CalFire siege
+                            </li>
+                            <li>
+                                NIROPS 16-bit LWIR mosaics for all missions
+                            </li>
+                            <li>
+                                RGB and NIR mosaics for 20–30 missions
+                            </li>
+                        </ul>
+                        <p>To request this data, please write to <a href="mailto:contact@pyregence.org">contact@pyregence.org</a>.</p>
+                    </div>
+                </article>
+            </div>
+        </div>
+    </section>
+    <section class="data mb-5">
+        <div class="container">
+            <div class="row">
+                <article class="col-lg-12 mb-4 px-3">
+                    <div class="data-single">
+                        <h3>
                             Upper Air Profiler Pilot Test (Workgroup #1)
                         </h3>
                         <div class="line yellow"></div>
