Update two titles

--- a/resources/html/about.html
+++ b/resources/html/about.html
@@ -401,7 +401,7 @@
                             </div>
                         </div>
                     </div>
-                </div><!--end .team-block maxwell--> 
+                </div><!--end .team-block maxwell-->
                 <div class="col-sm-6 mb-3 team-block f-fb f-pl f-it">
                     <div class="row">
                         <div class="col-md-4 col-sm-12">
@@ -674,12 +674,12 @@
                     <div class="row">
                         <div class="col-md-4 col-sm-12">
                             <a href="#" data-featherlight="#geronimo">
-                                <img class="headshot mb-3" src="images/team/mariko-geronimo.jpg" alt="Mariko Geronimo, M.A.">
+                                <img class="headshot mb-3" src="images/team/mariko-geronimo.jpg" alt="Mariko Geronimo Aydin">
                             </a>
                         </div>
                         <div class="col-md-8 col-sm-12">
-                            <h3><a href="#" data-featherlight="#geronimo">Mariko Geronimo, M.A.</a></h3>
-                            <p class="role mb-0">Founder, Economist and Utilities Analyst</p>
+                            <h3><a href="#" data-featherlight="#geronimo">Mariko Geronimo Aydin, M.A.</a></h3>
+                            <p class="role mb-0">Co-founder, Economist and Utilities Analyst</p>
                             <p>Lumen Energy Strategy</p>
                             <a href="https://www.linkedin.com/in/mariko-geronimo-aydin-494955145/" target="_blank"><img class="linkedin-icon" src="images/icons/linkedin-icon@2x.jpg" alt="linkedin link"></a>
                             <a class="btn learn-more" href="#" data-featherlight="#geronimo">Learn More</a>
@@ -687,11 +687,11 @@
                                 <div class="container">
                                     <div class="row">
                                         <div class="col-sm-3">
-                                            <img class="headshot mb-3" src="images/team/mariko-geronimo.jpg" alt="Mariko Geronimo, M.A.">
+                                            <img class="headshot mb-3" src="images/team/mariko-geronimo.jpg" alt="Mariko Geronimo Aydin">
                                         </div>
                                         <div class="col-sm-9">
-                                            <h2>Mariko Geronimo, M.A. <a href="https://www.linkedin.com/in/mariko-geronimo-aydin-494955145/" target="_blank"><img class="linkedin-icon" src="images/icons/linkedin-icon@2x.jpg" alt="linkedin link"></a></h2>
-                                             <p class="role mb-0">Founder, Economist and Utilities Analyst</p>
+                                            <h2>Mariko Geronimo Aydin, M.A. <a href="https://www.linkedin.com/in/mariko-geronimo-aydin-494955145/" target="_blank"><img class="linkedin-icon" src="images/icons/linkedin-icon@2x.jpg" alt="linkedin link"></a></h2>
+                                             <p class="role mb-0">Co-founder, Economist and Utilities Analyst</p>
                                              <p>Lumen Energy Strategy</p>
                                              <div class="line yellow"></div>
                                              <p>
@@ -1185,7 +1185,7 @@
                             </a>
                         </div>
                         <div class="col-md-8 col-sm-12">
-                            <h3><a href="#" data-featherlight="#theodori">Maria Theodori, M.Sc., EIT</a></h3>
+                            <h3><a href="#" data-featherlight="#theodori">Maria Theodori, M.Sc., P.E.</a></h3>
                             <p class="role mb-0">Fire Engineer</p>
                             <p>Reax Engineering</p>
                             <a target="_blank" href="https://www.linkedin.com/in/mtheodori/"><img class="linkedin-icon" src="images/icons/linkedin-icon@2x.jpg" alt="linkedin link"></a>
@@ -1197,7 +1197,7 @@
                                             <img class="headshot mb-3" src="images/team/maria-theodori.jpg" alt="Maria Theodori">
                                         </div>
                                         <div class="col-sm-9">
-                                            <h2>Maria Theodori, M.Sc., EIT <a target="_blank" href="https://www.linkedin.com/in/mtheodori/"><img class="linkedin-icon" src="images/icons/linkedin-icon@2x.jpg" alt="linkedin link"></a></h2>
+                                            <h2>Maria Theodori, M.Sc., P.E. <a target="_blank" href="https://www.linkedin.com/in/mtheodori/"><img class="linkedin-icon" src="images/icons/linkedin-icon@2x.jpg" alt="linkedin link"></a></h2>
                                              <p class="role mb-0">Fire Engineer</p>
                                              <p>Reax Engineering</p>
                                              <div class="line yellow"></div>
