--- a/resources/html/forecast-tools.html
+++ b/resources/html/forecast-tools.html
@@ -99,7 +99,7 @@
                 <div class="col-lg-3 col-md-4 col-sm-6 px-3 my-3 d-flex">
                     <div class="indv p-3">
                         <img class="headshot mb-4" src="images/team/maria-theodori.jpg" alt="Maria Theodori">
-                        <h3 class="text-center">Maria Theodori</h3>
+                        <h3 class="text-center">Maria Theodori, P.E.</h3>
                         <p class="text-center">
                             Reax Engineering
                         </p>
@@ -137,8 +137,8 @@
                 </div>
                 <div class="col-lg-3 col-md-4 col-sm-6 px-3 my-3 d-flex">
                     <div class="indv p-3">
-                        <img class="headshot mb-4" src="images/team/mariko-geronimo.jpg" alt="Mariko Geronimo">
-                        <h3 class="text-center">Mariko Geronimo</h3>
+                        <img class="headshot mb-4" src="images/team/mariko-geronimo.jpg" alt="Mariko Geronimo Aydin">
+                        <h3 class="text-center">Mariko Geronimo Aydin, M.A.</h3>
                         <p class="mb-1 text-center">
                             Lumen Energy Strategy
                         </p>
