Addition of Carrie Levine to About.

--- a/resources/html/about.html
+++ b/resources/html/about.html
@@ -874,6 +874,40 @@
                         </div>
                     </div>
                 </div><!--end .team-block keenan-->
+                <div class="col-sm-6 mb-3 team-block f-fb">
+                    <div class="row">
+                        <div class="col-md-4 col-sm-12">
+                            <a href="#" data-featherlight="#levine">
+                                <img class="headshot mb-3" src="images/team/carrie-levine.jpg" alt="Carrie Levine">
+                            </a>
+                        </div>
+                        <div class="col-md-8 col-sm-12">
+                            <h3><a href="#" data-featherlight="#levine">Carrie Levine, PhD</a></h3>
+                            <p class="role mb-0">Senior Research Scientist</p>
+                            <p>Spatial Informatics Group</p>
+                            <a href="https://www.linkedin.com/in/carrie-levine" target="_blank"><img class="linkedin-icon" src="images/icons/linkedin-icon@2x.jpg" alt="linkedin link"></a>
+                            <a class="btn learn-more" href="#" data-featherlight="#levine">Learn More</a>
+                            <div class="lightbox" id="levine">
+                                <div class="container">
+                                    <div class="row">
+                                        <div class="col-sm-3">
+                                            <img class="headshot mb-3" src="images/team/carrie-levine.jpg" alt="Carrie Levine">
+                                        </div>
+                                        <div class="col-sm-9">
+                                            <h2>Carrie Levine <a href="https://www.linkedin.com/in/carrie-levine" target="_blank"><img class="linkedin-icon" src="images/icons/linkedin-icon@2x.jpg" alt="linkedin link"></a></h2>
+                                             <p class="role mb-0">Senior Research Scientist</p>
+                                             <p>Spatial Informatics Group</p>
+                                             <div class="line yellow"></div>
+                                             <p>
+                                                 Dr. Carrie Levine is a contributor to the Fire Behavior Workgroup developing a new fuel inventory and fire behavior system. She will contribute to the integration of forest structure modeling and tree mortality dynamics into short-term and long-term fire prediction models. Dr. Levine’s research seeks to inform understanding of the impacts of forest disturbance and forest restoration on ecosystem structure and function. Her research employs a variety of experimental, observational, and reconstructed data to investigate changes in the structure and function of California forests over time as a result of the legacies of fire suppression and land use history, and her work addressing methods for quantifying baseline forest conditions has been used to inform decision making regarding restoration actions in California forests. Dr. Levine received a PhD from the University of California, Berkeley. Before joining SIG, she was a postdoctoral researcher at the University of California, Davis and a lead scientist at Conservation Science Partners, Inc.
+                                             </p>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div><!--end .team-block levine-->
                 <div class="col-sm-6 mb-3 team-block f-ew f-fb f-ft">
                     <div class="row">
                         <div class="col-md-4 col-sm-12">
