update to Finney bio.

--- a/resources/html/about.html
+++ b/resources/html/about.html
@@ -646,7 +646,7 @@
                         </div>
                         <div class="col-md-8 col-sm-12">
                             <h3><a href="#" data-featherlight="#finney">Mark Finney, PhD</a></h3>
-                            <p class="role mb-0">Director of the USFS Missoula Fire Sciences Laboratory</p>
+                            <p class="role mb-0">Research Forester at USFS Missoula Fire Sciences Laboratory</p>
                             <p>USFS</p>
                             <a class="btn learn-more" href="#" data-featherlight="#finney">Learn More</a>
                             <div class="lightbox" id="finney">
@@ -657,7 +657,7 @@
                                         </div>
                                         <div class="col-sm-9">
                                             <h2>Mark Finney, PhD</h2>
-                                             <p class="role mb-0">Director of the USFS Missoula Fire Sciences Laboratory</p>
+                                             <p class="role mb-0">Research Forester at USFS Missoula Fire Sciences Laboratory</p>
                                              <p>USFS</p>
                                              <div class="line yellow"></div>
                                              <p>
