Small format change

--- a/resources/html/about.html
+++ b/resources/html/about.html
@@ -885,7 +885,9 @@
                             <h3><a href="#" data-featherlight="#levine">Carrie Levine, PhD</a></h3>
                             <p class="role mb-0">Senior Research Scientist</p>
                             <p>Spatial Informatics Group</p>
-                            <a href="https://www.linkedin.com/in/carrie-levine" target="_blank"><img class="linkedin-icon" src="images/icons/linkedin-icon@2x.jpg" alt="linkedin link"></a>
+                            <a href="https://www.linkedin.com/in/carrie-levine" target="_blank">
+                                <img class="linkedin-icon" src="images/icons/linkedin-icon@2x.jpg" alt="linkedin link">
+                            </a>
                             <a class="btn learn-more" href="#" data-featherlight="#levine">Learn More</a>
                             <div class="lightbox" id="levine">
                                 <div class="container">
