--- a/resources/html/~header.html
+++ b/resources/html/~header.html
@@ -25,34 +25,10 @@
                         <li
                             itemscope="itemscope"
                             itemtype="https://www.schema.org/SiteNavigationElement"
-                            id="menu-item-about"
+                            id="menu-item-home"
                             class="nav-item"
                         >
-                            <a href="/about" class="nav-link">about</a>
-                        </li>
-                        <li
-                            itemscope="itemscope"
-                            itemtype="https://www.schema.org/SiteNavigationElement"
-                            id="menu-item-data"
-                            class="nav-item"
-                        >
-                            <a href="/data" class="nav-link">data</a>
-                        </li>
-                        <li
-                            itemscope="itemscope"
-                            itemtype="https://www.schema.org/SiteNavigationElement"
-                            id="menu-item-forecasts"
-                            class="nav-item"
-                        >
-                            <a href="/forecast" class="nav-link">forecasts</a>
-                        </li>
-                        <li
-                            itemscope="itemscope"
-                            itemtype="https://www.schema.org/SiteNavigationElement"
-                            id="menu-item-blog"
-                            class="nav-item"
-                        >
-                            <a href="https://blog.pyregence.org" class="nav-link">blog</a>
+                            <a href="https://www.pyregence.org" class="nav-link">home</a>
                         </li>
                     </ul>
                 </div>
